--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: black;
 }
 
 a {
@@ -60,6 +61,13 @@ a {
   margin: 10px 0px;
   border-radius: 20px;
   transition: all 0.3s ease;
+}
+
+.logoText {
+  color: white;
+  font-size: 1.7rem;
+  margin-left: 10px;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 900px) {
